--- a/more.css
+++ b/more.css
@@ -2,7 +2,7 @@
     display: flex;
     padding: 20px;
     margin: 0px;
-    background-color: aquamarine;
+    background-color: rgb(166, 187, 255);
     border: solid 1px;
     flex-direction: row;
 }
@@ -34,4 +34,14 @@ p{
     .wrapper{
         flex-direction: column;
     }
+}
+
+#feedbackform{
+    width: 100%;
+    height: 600px;
+}
+
+#feedbackwrapper{
+    flex-direction: column;
+    height: 500px;
 }
