--- a/gallery.css
+++ b/gallery.css
@@ -6,6 +6,7 @@
     width: 90%;
     height: 90%;
     margin-left: 5%;
+    margin-bottom: 5%;
 }
 
 .cell{
@@ -53,4 +54,16 @@
 
 body{
     text-align: center;
+    background-color: azure;
+}
+
+h1{
+    text-align: center;
+    background-image: linear-gradient(45deg,#553c3c, #2c3f4b);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+    text-shadow: 1px 1px 75px rgb(255, 255, 255);
 }
