--- a/more.css
+++ b/more.css
@@ -11,11 +11,23 @@ body{
     padding: 0px;
     margin: 0px;
     width: 100%;
+    background-color:aliceblue;
 }
 
 .heading{
     font-size: 40px;
 
+}
+
+h2{
+    text-align: center;
+    background-image: linear-gradient(45deg, rgb(198, 52, 246), rgb(255, 43, 43));
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+    text-shadow: 1px 1px 75px rgb(255, 255, 255);
 }
 
 h1{
