--- a/draw.css
+++ b/draw.css
@@ -66,7 +66,7 @@ h1{
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
-    text-shadow: 1px 1px 75px rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 p{
