--- a/gallery.css
+++ b/gallery.css
@@ -66,4 +66,9 @@ h1{
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
     text-shadow: 1px 1px 75px rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+p{
+    font-family: "Century Gothic", CenturyGothic, Geneva, AppleGothic, sans-serif;
 }
