--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 35%;
+    width: 45%;
     text-align: center;
     background-color: #f3ec78;
     background-image: linear-gradient(45deg, #FF0000, #FF7F00, #FFFF00, #00FF00, #2e73ff, #c43bff);
@@ -68,7 +68,7 @@ h1 {
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
-    text-shadow: 1px 1px 75px rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 p{
