--- a/more.css
+++ b/more.css
@@ -28,10 +28,12 @@ h2{
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
     text-shadow: 1px 1px 75px rgb(255, 255, 255);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1{
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 p{
