--- a/gallery.css
+++ b/gallery.css
@@ -12,6 +12,11 @@
 .cell{
     border: 4px solid;
     border-radius: 10px;
+    transition: transform 150ms ease-in-out;
+}
+
+.cell:hover{
+    transform: scale(1.05);
 }
 
 @media screen and (min-width: 800px) {
@@ -50,6 +55,13 @@
     opacity: 0.3;
     transform: translateY(-101%) ;
     border-radius: 10px;
+    transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -webkit-transition: opacity .25s ease-in-out;
+}
+
+.filter:hover{
+    opacity: 0;
 }
 
 body{
