--- a/gallery.css
+++ b/gallery.css
@@ -67,17 +67,18 @@
 body{
     text-align: center;
     background-color: azure;
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(240,240,240,1) 65%, rgba(179,179,179,1) 100%);
 }
 
 h1{
     text-align: center;
-    background-image: linear-gradient(45deg,#553c3c, #2c3f4b);
-    background-size: 100%;
+    background-image: linear-gradient(0deg,#ffa10c, #ff4360, #ff0e93, #6a00fc);
+    background-size: 50%;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
-    text-shadow: 1px 1px 75px rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
