--- a/navbar.css
+++ b/navbar.css
@@ -15,6 +15,7 @@
     padding-right: 20px;
     text-decoration:solid;
     font-size: 20px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
 #navbarwrapper a:hover{
