--- a/index.css
+++ b/index.css
@@ -25,6 +25,10 @@
     border: none;
 }
 
+input[type="color"]::-webkit-color-swatch {
+	border: none;
+}
+
 body{
     margin: 0px;
     background: rgb(42,40,57);
@@ -32,28 +36,38 @@ body{
 }
 
 table{
-    border: 5px solid;
+    border: 2px solid #272727;
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
     background-color: white;
+    border-collapse: collapse;
+}
+
+td:nth-child(4n-3){
+    background-color: #272727;
 }
 
 td, th{
-    border: 2px solid;
-    border-color: gray;
+    border-bottom: 2px solid #272727;
     height: 40px;
     font-size: 27px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+td{
+    border-right: 2px solid #272727;
 }
 
 th{
-    background-color: #a6bbff;
+    background-image: linear-gradient(0deg,rgba(201,218,255,1) 0%, rgba(166,187,255,1));
     color: black;
+    height: 45px;
 }
 
 tr:nth-child(even) {
-    background-color:#cccccc;
+    background-color:#cecfda;
 }
 
 h1 {
